fix bootstrap carousel

--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -8,8 +8,7 @@ html(lang="en")
     meta(name="author",                content ="Luan Vicente")
     meta(name="description",           content ="Apollo - Photographer UI Design")
 
-    link(rel="stylesheet",
-         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel="stylesheet", href="assets/css/bootstrap.min.css")
     link(rel="stylesheet" href="assets/css/main.css")
 
     title Apollo
@@ -18,5 +17,5 @@ html(lang="en")
     block content
 
     script(src="http://code.jquery.com/jquery-3.1.1.min.js")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
+    script(src="assets/js/bootstrap.min.js")
     script(src="assets/js/main.js")
