--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -16,6 +16,6 @@ html(lang="en")
   body
     block content
 
-    script(src="http://code.jquery.com/jquery-3.1.1.min.js")
+    script(src="assets/js/jquery.min.js")
     script(src="assets/js/bootstrap.min.js")
     script(src="assets/js/main.js")
