general css updated

--- a/src/css/components/_about-frame.styl
+++ b/src/css/components/_about-frame.styl
@@ -9,7 +9,7 @@
       /* @media 1024px */
       @media (min-width: 1024px)
         float: right
-        margin-right: 10%
+        margin-right: 5%
 
       > .title
         set_font-size(30px)
@@ -52,6 +52,8 @@
             background-image: url('../images/pinterest-hover.png')
 
     > .photo
-      float: left
-      width: 35%
-      margin-left: 8%
+      /* @media 1024x */
+      @media (min-width: 1024x)
+        float: left
+        width: 35%
+        margin-left: 8%
