add consistent texts

--- a/src/css/components/_header-content.styl
+++ b/src/css/components/_header-content.styl
@@ -50,5 +50,10 @@
             text-decoration: none
             color: color_lightgray
 
+
+  > .main-footer
+    > .texts .link
+      text-decoration: none
+
 .open
   transform: translateX(0)
