--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -30,6 +30,8 @@ block content
               li.menu: a.link(href="#contact") Contact
 
           footer.main-footer
+            p.texts Texts by
+              a.link(href="http://ngm.nationalgeographic.com/2013/10/power-of-photography/draper-text")  Robert Draper.
             p.copy &copy; 2016 Apollo.
 
       .content-wrapper
@@ -37,11 +39,9 @@ block content
           h2.title Apollo
             span.lighttext  Photographer UI Design
           p.description
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            | sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-            | enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-            | ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-            | reprehenderit in voluptate velit esse cillum dolore.
+            | Photographers use their cameras as tools of exploration, passports
+            | to inner sanctums, instruments for change. Their images are proof
+            | that photography matters—now more than ever.
         img.photo(src="assets/images/photo-back.png" alt="John Apollo Picture")
 
 
@@ -52,13 +52,10 @@ block content
         div.text-box
           h2.title <span class="lighttext">&#8212; My name is</span> Apollo
           p.description
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            | minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            | aliquip ex ea commodo consequat.  Duis aute irure dolor in
-            | reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            | pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            | culpa qui officia deserunt mollit anim id est laborum.
+            | By wresting a precious particle of the world from time and space
+            | and holding it absolutely still, a great photograph can explode
+            | the totality of our world, such that we never see it quite the
+            | same again.
           ul.social-list
             li.social.facebook: a.link(href="#") Facebook
             li.social.instagram: a.link(href="#") Instagram
@@ -99,10 +96,12 @@ block content
           h2.title Ut enim
             span.lighttext  ad minim
           p.description
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            | minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            | aliquip ex ea commodo consequat.  Duis aute irure dolor in
+            | Of course, every professional photographer hopes for The Epic
+            | Shot, the once-in-a-lifetime collision of opportunity and skill
+            | that gains a photograph instant entry into the pantheon alongside
+            | Joe Rosenthal’s Iwo Jima, Bob Jackson’s encounter with Jack Ruby
+            | gunning down Lee Harvey Oswald, and the Apollo 8 astronauts’
+            | color depictions of planet Earth in its beaming entirety.
         img.photo(src="assets/images/photo-stairs.jpg" alt="Stairs Photo")
 
 
@@ -137,9 +136,9 @@ block content
         h2.title Say
           span.lighttext  Hello
         p.description
-          | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          | minim veniam, quis nostrud exercitation ullamco laboris nisi ut.
+          | Instead, the very best of their images remind us that a photograph
+          | has the power to do infinitely more than document. It can transport
+          | us to unseen worlds.
         form.contact-form
           input.field.basic(type="email", placeholder="Your Email")
           input.field.basic(type="text", placeholder="Subject")
